# chess_cpp

./: .gitignore  CMakeLists.txt  README.md  chessboard.cpp  chessboard.hpp  main.cpp  modifications.txt  move.cpp  move.hpp  pgn_parser.cpp  pgn_parser.hpp  piece.cpp  piece.hpp  square.cpp  square.hpp
docs/: liens utiles.txt
docs/PGN/: 0_TEST_FAUX_PGN.pgn  165339153448-Mboopie_vs_ChristIsLordNow-2026-02-28.pgn  165339697304-adenendul_vs_Mboopie-2026-02-28.pgn  165339976012-DamianFer_vs_Mboopie-2026-02-28.pgn  165340327660-Mboopie_vs_Mitchhmoneyyy-2026-02-28.pgn  165340764406-Mboopie_vs_BipToe-2026-02-28.pgn  165364771870-Mboopie_vs_Sofyan_Senen-2026-03-01.pgn  165365070806-Mboopie_vs_khursanbekovich-2026-03-01.pgn  165365511630-Qlebin_vs_Mboopie-2026-03-01.pgn  165365841158-Serzh65_vs_Mboopie-2026-03-01.pgn  165366768900-SmthFishy01_vs_Mboopie-2026-03-01.pgn  165370653672-Mboopie_vs_khellooo-2026-03-01.pgn  165371013594-Mboopie_vs_Majd-Alnajjar-2026-03-01.pgn  165371364652-INOEL85_vs_Mboopie-2026-03-01.pgn  FAUX_ARRIVEE_CASTLE_EN_ECHEC.pgn  ct-Almeida Quintana, Omar-Miranda Camus, Joaquin Ignacio-III Temuco Open 2026-6.5-2026-01-12.pgn  dtwaldo_vs_Mboopie_2026.03.01.pgn  game_000001.pgn  game_000002.pgn  game_000003.pgn  game_000004.pgn  game_000005.pgn  game_000006.pgn  game_000007.pgn  game_000008.pgn  game_000009.pgn  game_000010.pgn  game_000011.pgn  game_000012.pgn  game_000013.pgn  game_000014.pgn  game_000015.pgn  game_000016.pgn  game_000017.pgn  game_000018.pgn  game_000019.pgn  game_000020.pgn  game_000021.pgn  game_000022.pgn  game_000023.pgn  (+54 more)
docs/PGN/others/: game_000035.pgn  game_000036.pgn  game_000038.pgn  game_000039.pgn  game_000041.pgn  game_000042.pgn  game_000044.pgn  game_000046.pgn  game_000049.pgn  game_000056.pgn  game_000057.pgn  game_000058.pgn  game_000059.pgn  game_000062.pgn  game_000064.pgn  game_000065.pgn  game_000066.pgn  game_000068.pgn  game_000069.pgn  game_000070.pgn  game_000071.pgn  game_000073.pgn  game_000075.pgn  game_000077.pgn  game_000081.pgn  game_000082.pgn  game_000083.pgn  game_000084.pgn  game_000088.pgn  game_000089.pgn  game_000091.pgn  game_000092.pgn  game_000096.pgn  game_000097.pgn  game_000100.pgn  game_000101.pgn  game_000104.pgn  game_000105.pgn  game_000106.pgn  game_000109.pgn  (+3118 more)
docs/PGN/others/problemes/: FAUX_CASTLE_QUAND_CHECKED.pgn  FAUX_CASTLE_UNSAFE.pgn  game_000909.pgn
gui/: chess_engine.cp311-win_amd64.pyd  chess_engine.cp313-win_amd64.pyd  clean_pgn.py  dataset.py  main.py  model.py  train.py
python_src/: benchmark_release_debug.py  chess_engine.cp311-win_amd64.pyd  chess_engine.pyi  clean_pgn.py  convert_pgn_to_binary.py  dataset.py  download_pgns.py  evaluate_elo.py  export_onnx.py  extract_pgn_from_lichess.py  lib.py  lib_gui.py  main.py  mcts.py  model.py  play_against_bot.py  play_alphazero_bot.py  play_alphazero_bot_cpp_mcts.py  self_play.py  sharded_dataset.py  stockfish_player.py  test.py  tournament_elo.py  tournament_state.whr  train.py  train_self_play.py  train_supervised.py  transfer_weights.py  uci_wrapper.py  zobtest.py
python_src/checkpoints/: 2026_03_10_20h08_iter2_unsupervised.onnx  2026_03_10_premier_self_play.onnx  2026_03_11_13h21_iter14_unsupervised.onnx  2026_03_12_02h16_iter18_unsupervised.onnx  2026_03_12_17h43_iter7_unsupervised.onnx  2026_03_12_22h52_iter1_unsupervised.onnx  2026_03_12_22h52_iter2_unsupervised.onnx  2026_03_12_22h52_iter3_unsupervised.onnx  2026_03_13_01h31_iter18_unsupervised.onnx  current_mcts_iter26_int8.onnx  current_mcts_iter2_int8.onnx  replay_buffer.npz  supervised_best_03_07.onnx  supervised_best_03_09_lichess.onnx  supervised_best_03_11_lichess_FIXED.onnx
python_src/raw_pgns/: Karjakin.pgn
src/: bindings.cpp  chessboard.cpp  chessboard.hpp  main.cpp  mcts.cpp  mcts.hpp  move.cpp  pgn_parser.hpp  piece.cpp  piece.hpp  square.cpp  square.hpp  zobrist.cpp  zobrist.hpp
